added overwatch logo

--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -11,7 +11,9 @@
         <header>
             <div class="header-container">
                 <div class="header-child header-left">
-                    <div>Overwatch League Database</div>
+                    <div>
+                        <a id="logo" href="index.html"><img src="style/overwatch_logo.png" class="logo"></a>
+                    </div>
                 </div>
                 <div class="header-child header-right">
                     <div class="menu menu-queries">
