changed header and background

--- a/TP2/view/style/index.css
+++ b/TP2/view/style/index.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    background-color: gray;
 }
 
 .header-container {
@@ -38,6 +39,6 @@ body {
 }
 
 .menu:hover {
-    background-color: gray;
+    background-color: rgba(255, 255, 255, 0.712);
     cursor: pointer;
 }
