changed font family

--- a/TP2/view/style/index.css
+++ b/TP2/view/style/index.css
@@ -31,9 +31,13 @@ body {
 
 .menu {
     float: right;
-    width: 150px;
+    width: 170px;
     height: 100%;
     position: relative;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
+    color: black;
+    font-size: 18px;
 }
 
 .menu > div {
