--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -5,7 +5,7 @@
         <script type="text/javascript" src="scripts/jquery.js"></script>
         <script type="text/javascript" src="scripts/script.js"></script>
 
-        <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/header.css">
     </head>
     <body>
         <header>
