added overwatch symbol

--- a/TP2/view/style/header.css
+++ b/TP2/view/style/header.css
@@ -8,6 +8,11 @@ body {
     background-color: lightgray;
 }
 
+.symbol {
+    max-height: 50px;
+    margin-right: 35px;
+}
+
 .logo {
     max-width: 300px;
 }
