added overwatch symbol

--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -12,7 +12,10 @@
             <div class="header-container">
                 <div class="header-child header-left">
                     <div>
-                        <a id="logo" href="index.html"><img src="style/overwatch_logo.png" class="logo"></a>
+                        <a id="logo" href="index.html">
+                            <img src="style/overwatch_symbol.png" alt="ow-symbol" class="symbol"><!--
+                         --><img src="style/overwatch_logo.png" alt="ow-logo" class="logo">
+                        </a>
                     </div>
                 </div>
                 <div class="header-child header-right">
