--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -13,7 +13,8 @@
                 <div class="header-child header-left">
                     <div>
                         <a id="logo" href="index.html">
-                            <img src="style/overwatch_symbol.png" alt="ow-symbol" class="symbol"><img src="style/overwatch_logo.png" alt="ow-logo" class="logo">
+                            <img src="style/overwatch_symbol.png" alt="ow-symbol" class="symbol"><!--
+                         --><img src="style/overwatch_logo.png" alt="ow-logo" class="logo">
                         </a>
                     </div>
                 </div>
