--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -6,6 +6,7 @@
         <script type="text/javascript" src="scripts/script.js"></script>
 
         <link rel="stylesheet" type="text/css" href="style/header.css">
+        <link rel="stylesheet" type="text/css" href="style/body.css">
     </head>
     <body>
         <header>
@@ -20,16 +21,30 @@
                 </div>
                 <div class="header-child header-right">
                     <div class="menu menu-queries-own">
-                        <div>OUTRO BOTAO</div>
+                        <div>WRITE YOUR OWN</div>
                     </div>
                     <div class="menu menu-queries">
-                        <div>BOTAO</div>
+                        <div>QUERIES</div>
                     </div>
                 </div>
             </div>
         </header>
         <div class="body-container">
-            
+            <div class="queries-container">
+                <div id="query1" class="query-header"></div>
+                <div id="query2" class="query-header"></div>
+                <div id="query3" class="query-header"></div>
+                <div id="query4" class="query-header"></div>
+                <div id="query5" class="query-header"></div>
+                <div id="query6" class="query-header"></div>
+                <div id="query7" class="query-header"></div>
+                <div id="query8" class="query-header"></div>
+                <div id="query9" class="query-header"></div>
+                <div id="query10" class="query-header"></div>
+            </div>
+            <div class="myo-container">
+
+            </div>
         </div>
     </body>
 </html>
