--- a/TP2/view/index.html
+++ b/TP2/view/index.html
@@ -31,9 +31,15 @@
         </header>
         <div class="body-container">
             <div class="queries-container">
-                <div id="query1" class="query-header"></div>
-                <div id="query2" class="query-header"></div>
-                <div id="query3" class="query-header"></div>
+                <div id="query1" class="query-header">
+                    <div class="inner inner-query"><div class="inner inner-number">1.</div>SELECT * FROM PLAYER LIMIT 5;</div>
+                </div>
+                <div id="query2" class="query-header">
+                    <div class="inner inner-query"><div class="inner inner-number">2.</div>SELECT * FROM PLAYER LIMIT 10;</div>
+                </div>
+                <div id="query3" class="query-header">
+                    <div class="inner inner-query"><div class="inner inner-number">3.</div>SELECT * FROM PLAYER LIMIT 15;</div>
+                </div>
                 <div id="query4" class="query-header"></div>
                 <div id="query5" class="query-header"></div>
                 <div id="query6" class="query-header"></div>
@@ -41,9 +47,15 @@
                 <div id="query8" class="query-header"></div>
                 <div id="query9" class="query-header"></div>
                 <div id="query10" class="query-header"></div>
+                <div id="query11" class="query-header"></div>
+                <div id="query12" class="query-header"></div>
+                <div id="query13" class="query-header"></div>
             </div>
             <div class="myo-container">
-
+                <div class="myo-input-container">
+                    <div class="myo-label"><b>INSIRA SUA REQUISIÇÃO</b></div>
+                    <textarea class="myo-input" name="myo-input"></textarea>
+                </div>
             </div>
         </div>
     </body>
