--- a/TP2/view/style/body.css
+++ b/TP2/view/style/body.css
@@ -46,6 +46,7 @@
 
 .myo-label{
     margin-bottom: 30px;
+    margin-top: 40px;
     font-size: 140%;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
@@ -55,4 +56,10 @@
     height: 250px;
     font-size: 200%;
     padding: 20px;
+}
+
+.button-submit{
+    margin-top: 30px;
+    height: 50px;
+    width: 140px;
 }
