--- a/TP2/view/style/header.css
+++ b/TP2/view/style/header.css
@@ -1,12 +1,14 @@
 body {
     margin: 0;
-    background-color: #a6a6a6;
+    background-color: #d9d9d9;
     height: 100%;
 }
 
 .header-container {
     height: 80px;
-    background-color: lightgray;
+    background-color: #bfbfbf;
+    border-bottom: 1px solid gray;
+    box-shadow: 0px 1px 5px grey;
 }
 
 .symbol {
@@ -62,7 +64,7 @@ body {
 .menu::before {
     content: '';
     display: block;
-    background-color: darkslategray;
+    background-color: #ff8c1a;
     height: 4px;
     width: 0%;
     position: absolute;
